# my-backend-repo

./: .env  .gitignore  Dockerfile  Procfile  README.md  async.py  db.sqlite3  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-heroku.yml
auth_user/: models.py  serializers.py  urls.py  views.py
auth_user/helpers/: permissions.py  send_mails.py  send_password_reset_email.py
auth_user/migrations/: 0001_initial.py  0002_customuser_username.py  0002_remove_customuser_is_admin_customuser_is_staff_and_more.py  0002_remove_customuser_is_admin_remove_customuser_uuid.py  0003_alter_customuser_username.py
auth_user/templates/: activate_email.html
backend/: celery.py  settings.py  storage_backends.py  urls.py
cart_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cart_management/migrations/: 0001_initial.py  0002_initial.py  0002_rename_promotional_code_cart_promotion_code_and_more.py
dropshop/: apps.py  serializers.py  urls.py  views.py
dropshop/migrations/: 0001_initial.py  0002_remove_pricing_end_date_remove_pricing_start_date.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
inventory_management/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
inventory_management/migrations/: 0001_initial.py  0002_initial.py  0002_productreview.py  (+12 more)
order_management/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
order_tracking/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
payment/: models.py  paypal_client.py  paystack.py  stripe_confirm.py  stripe_create_intent.py  tasks.py  urls.py  views.py
product_images/: eye.jfif  floss.jfif
scripts/: collectstatic.sh  entrypoint.sh  migrations.sh
shop_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
templates/: upload.html
user_app/: models.py  serializers.py  urls.py  views.py
user_management/: apps.py  models.py  oauth.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
(+22 files in other folders)
