[tool.poetry]
name = "my-backend-repo"
version = "0.1.0"
description = ""
authors = ["bright <brbojr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
flake8 = "^7.1.1"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.10.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
sendgrid = "^6.11.0"
black = "^24.8.0"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
